Created a connection to the default postgres database

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,17 +4,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Importing needed packages"
+    "#### Importing needed libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import psycopg2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating a connection to the default postgres database\n",
+    "\n",
+    "Take note of the use of the try and except block. This is done so as to catch any errors that may occur during the execution of the code block."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    conn = psycopg2.connect(host=\"localhost\", database=\"postgres\", user=\"postgres\", password=\"Databishop\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
    ]
   }
  ],
