Created the LEGO Database

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,86 @@
     "    conn = psycopg2.connect(host=\"localhost\", database=\"postgres\", user=\"postgres\", password=\"Databishop\")\n",
     "except psycopg2.Error as e:\n",
     "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using the connection to get a cursor to be used for makign queries\n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "\n",
+    "# Setting autocommit for queries to True    \n",
+    "conn.set_session(autocommit=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the LEGO Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "database \"legodb\" already exists\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creating Database with name legoDB\n",
+    "try:\n",
+    "    cur.execute(\"CREATE DATABASE legodb\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reconnecting to the LEGO Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clsoing the initial connection to the default database\n",
+    "try:\n",
+    "    conn.close()\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "\n",
+    "# Connecting to the LEGO Database    \n",
+    "try:\n",
+    "    conn = psycopg2.connect(host=\"localhost\", database=\"legodb\", user=\"postgres\", password=\"Databishop\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "\n",
+    "# Getting the cursor    \n",
+    "try:\n",
+    "    cur = conn.cursor()\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "# Setting autocommit to True\n",
+    "conn.set_session(autocommit=True)"
    ]
   }
  ],
