Created the 8 tables in the lego database

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +117,186 @@
     "# Setting autocommit to True\n",
     "conn.set_session(autocommit=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the inventories table according to the defined schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS inventories \\\n",
+    "        (id INTEGER PRIMARY KEY,\\\n",
+    "        version INTEGER,\\\n",
+    "        set_number VARCHAR(50));\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the colours table according to the defined schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS colours \\\n",
+    "        (id INTEGER PRIMARY KEY,\\\n",
+    "        name VARCHAR(50),\\\n",
+    "        rgb VARCHAR(6),\\\n",
+    "        is_trans BOOLEAN );\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the parts table according to the defined schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS parts \\\n",
+    "    (part_number VARCHAR(50) PRIMARY KEY,\\\n",
+    "    name TEXT,\\\n",
+    "    part_cat_id INTEGER);\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the sets table according to the defined schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS sets \\\n",
+    "    (set_number VARCHAR(10) PRIMARY KEY,\\\n",
+    "    name VARCHAR(50),\\\n",
+    "    year INTEGER,\\\n",
+    "    theme_id INTEGER,\\\n",
+    "    num_parts INTEGER);\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the themes table according to the defined schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS themes \\\n",
+    "        (id INTEGER PRIMARY KEY,\\\n",
+    "        name VARCHAR(50),\\\n",
+    "        parent_id INTEGER);\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the part categories table according to the defined schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS part_invenories \\\n",
+    "        (id INTEGER PRIMARY KEY,\\\n",
+    "        name VARCHAR(50));\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the inventory sets table according to the defined schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS inventory_sets\\\n",
+    "        (inventory_id INTEGER,\\\n",
+    "        set_number VARCHAR(10),\\\n",
+    "        quantity INTEGER);\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating the inventory parts table according to the defined schema"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS inventory_parts\\\n",
+    "        (inventory_id INTEGER,\\\n",
+    "        part_number VARCHAR(50),\\\n",
+    "        colour_id INTEGER,\\\n",
+    "        quantity INTEGER,\\\n",
+    "        is_spare BOOLEAN);\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
   }
  ],
  "metadata": {
@@ -126,7 +306,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.2"
   }
  },
