Updated relationships between tables

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -240,12 +240,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
-    "    cur.execute(\"CREATE TABLE IF NOT EXISTS part_invenories \\\n",
+    "    cur.execute(\"CREATE TABLE IF NOT EXISTS part_categories \\\n",
     "        (id INTEGER PRIMARY KEY,\\\n",
     "        name VARCHAR(50));\")\n",
     "except psycopg2.Error as e:\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,6 +294,100 @@
     "        colour_id INTEGER,\\\n",
     "        quantity INTEGER,\\\n",
     "        is_spare BOOLEAN);\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Adding foreign key constraints to required tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding a foreign key constraint to the inventories table referencing the sets table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE inventories \\\n",
+    "                    ADD CONSTRAINT fk_set\\\n",
+    "                    FOREIGN KEY(set_number)\\\n",
+    "                    REFERENCES sets(set_number)\\\n",
+    "                    ON DELETE CASCADE;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "# Adding a foreign key constraint to the sets table referencing the themes table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE sets \\\n",
+    "                    ADD CONSTRAINT fk_theme\\\n",
+    "                    FOREIGN KEY(theme_id)\\\n",
+    "                    REFERENCES themes(id)\\\n",
+    "                    ON DELETE CASCADE;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "\n",
+    "# Adding a foreign key constraint to the parts table referencing the parts categories table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE parts \\\n",
+    "                    ADD CONSTRAINT fk_partcat\\\n",
+    "                    FOREIGN KEY(part_cat_id)\\\n",
+    "                    REFERENCES part_categories(id)\\\n",
+    "                    ON DELETE CASCADE;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "# Adding a foreign key constraint to the inventory parts table referencing the inventories categories table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE inventory_parts \\\n",
+    "                    ADD CONSTRAINT fk_inventory\\\n",
+    "                    FOREIGN KEY(inventory_id)\\\n",
+    "                    REFERENCES inventories(id)\\\n",
+    "                    ON DELETE CASCADE;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "# Adding a foreign key constraint to the inventory parts table referencing the parts table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE inventory_parts \\\n",
+    "                    ADD CONSTRAINT fk_partnum\\\n",
+    "                    FOREIGN KEY(part_number)\\\n",
+    "                    REFERENCES parts(part_number)\\\n",
+    "                    ON DELETE CASCADE;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "# Adding a foreign key constraint to the inventory parts table referencing the colours table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE inventory_parts \\\n",
+    "                    ADD CONSTRAINT fk_colourid\\\n",
+    "                    FOREIGN KEY(colour_id)\\\n",
+    "                    REFERENCES colours(id)\\\n",
+    "                    ON DELETE CASCADE;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "# Adding a foreign key constraint to the inventory sets table referencing the inventories table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE inventory_sets \\\n",
+    "                    ADD CONSTRAINT fk_inventoryid\\\n",
+    "                    FOREIGN KEY(inventory_id)\\\n",
+    "                    REFERENCES inventories(id)\\\n",
+    "                    ON DELETE CASCADE;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)\n",
+    "    \n",
+    "# Adding a foreign key constraint to the inventory sets table referencing the sets table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE inventory_sets \\\n",
+    "                    ADD CONSTRAINT fk_setnum\\\n",
+    "                    FOREIGN KEY(set_number)\\\n",
+    "                    REFERENCES sets(set_number)\\\n",
+    "                    ON DELETE CASCADE;\")\n",
     "except psycopg2.Error as e:\n",
     "    print(e)"
    ]
