Inserted data into parts, colours, and parts_categories tables

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,12 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import psycopg2"
+    "import numpy as np\n",
+    "import psycopg2\n",
+    "import psycopg2.extras as extras"
    ]
   },
   {
@@ -391,6 +393,185 @@
     "except psycopg2.Error as e:\n",
     "    print(e)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reading the csv files into pandas dataframes and importing the dataframes into their corresponding tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining the 'execute_df_values' function\n",
+    "\n",
+    "def execute_df_values(conn, df, table): \n",
+    "\n",
+    "\t# The function converts the DataFrame `df` into a list of tuples (`tuples`), where each tuple represents a row in the DataFrame\n",
+    "\ttuples = [tuple(x) for x in df.to_numpy()] \n",
+    "\n",
+    "\t# Constructing a comma-separated string of column names from the DataFrame.\n",
+    "\tcols = ','.join(list(df.columns)) \n",
+    "\n",
+    " \n",
+    "\t# SQL query to insert data into the specific\n",
+    "\tquery = \"INSERT INTO %s(%s) VALUES %%s\" % (table, cols)\n",
+    " \n",
+    "\ttry: \n",
+    "\t\textras.execute_values(cur, query, tuples) \n",
+    "\texcept (Exception, psycopg2.DatabaseError) as e: \n",
+    "\t\tprint(e) \n",
+    "\t\tconn.rollback() \n",
+    "\t\treturn \n",
+    "\n",
+    "\tprint(\"the dataframe is inserted\") \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining the 'get_column_names' function  \n",
+    " \n",
+    "def get_column_names(table_name):\n",
+    "    \n",
+    "    # The function returns the column names for specific tables in the database\n",
+    "    try:\n",
+    "        # Query to get column names from information_schema.columns\n",
+    "        query = f\"SELECT column_name FROM information_schema.columns WHERE table_name = '{table_name}';\"\n",
+    "        \n",
+    "        # Execute the query\n",
+    "        cur.execute(query)\n",
+    "        \n",
+    "        # Fetch all the results as a list of tuples and extract column names\n",
+    "        db_column_names = [column[0] for column in cur.fetchall()]\n",
+    "        \n",
+    "        return db_column_names\n",
+    "    except psycopg2.Error as e:\n",
+    "        print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inserting data into the part categories table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataframe is inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading the part categories data in a dataframe\n",
+    "part_categories_df = pd.read_csv('part_categories.csv')\n",
+    "\n",
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, part_categories_df, 'part_categories')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inserting data into the parts table\n",
+    "The 'part_num' column in the dataframe has to have the same column name as the 'part_number' column in the database table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataframe is inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading the part categories data in a dataframe\n",
+    "parts_df = pd.read_csv('parts.csv')\n",
+    "\n",
+    "# Renaming the part_num column in the dataframe to correspond with the part_number column in the parts table\n",
+    "column_mapping = {\n",
+    "    'part_num': 'part_number'\n",
+    "}\n",
+    "\n",
+    "parts_df.rename(columns=column_mapping, inplace=True)\n",
+    "\n",
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, parts_df, 'parts')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inserting data into the colours table\n",
+    "The 'f' and 't' values in the 'is_trans' column need to be converted to their boolean alternatives before being inserted into the colours table. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataframe is inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading the colours data into a dataframe\n",
+    "colours_df = pd.read_csv('colors.csv')\n",
+    "\n",
+    "# Replacing the respective values with Boolean False/True\n",
+    "colours_df.loc[colours_df['is_trans'] == 'f', 'is_trans'] = False\n",
+    "colours_df.loc[colours_df['is_trans'] == 't', 'is_trans'] = True\n",
+    "\n",
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, colours_df, 'colours')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
