Inserted data into the themes table

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -560,15 +560,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Inserting data into the themes table\n",
+    "\n",
+    "The 'parent_id' column contains some missing values. These values have to be taken care of so that the data could be successfully inserted into the themes table. "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataframe is inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading the part categories data in a dataframe\n",
+    "themes_df = pd.read_csv('themes.csv')\n",
+    "\n",
+    "# Converting NaN values to Zero, and casting the dtype of the column to an integer\n",
+    "themes_df['parent_id'] = themes_df['parent_id'].fillna(0).astype(int)\n",
+    "\n",
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, themes_df, 'themes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": []
