Inserted data into the sets table

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -594,7 +594,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: value too long for type character varying(50)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading the sets data in a dataframe\n",
+    "sets_df = pd.read_csv('sets.csv')\n",
+    "\n",
+    "# Renaming the set_num column in the dataframe to correspond with the set_number column in the sets table\n",
+    "column_mapping = {\n",
+    "    'set_num': 'set_number'\n",
+    "}\n",
+    "\n",
+    "sets_df.rename(columns=column_mapping, inplace=True)\n",
+    "\n",
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, sets_df, 'sets')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The error above indicates that some data to be inserted exceeds the data type constraint which represents VARCHAR(50) and which was set on the 'name' column. The data type for the said column needs to be changed to accomodate the data to be inserted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Updating the data type of the 'name' column in the sets table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE sets\\\n",
+    "                ALTER COLUMN name\\\n",
+    "                TYPE VARCHAR;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: value too long for type character varying(10)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, sets_df, 'sets')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The error above indicates that some data to be inserted exceeds the data type constraint which represents VARCHAR(10) and which was set on the 'set_number' column. The data type for the said column needs to be changed to accomodate the data to be inserted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Updating the data type of the 'set_number' column in the sets table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE sets\\\n",
+    "                ALTER COLUMN set_number\\\n",
+    "                TYPE VARCHAR;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataframe is inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, sets_df, 'sets')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": []
