Inserted data into the inventories inventory_sets, and inventory_parts tables

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -593,6 +593,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inserting data into the sets table\n",
+    "The 'set_num' column in the dataframe has to have the same column name as the 'set_number' column in the database table."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
@@ -703,11 +711,194 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inserting data into the inventories table\n",
+    "\n",
+    "Since the inventories table references the sets table from its 'set_number' column, hence I need to update the data type to VARCHAR, to correspond with that of the sets table.\n",
+    "\n",
+    "Also, the 'set_num' column in the dataframe has to have the same column name as the 'set_number' column in the database table."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Updating the data type of the 'set_number' column in the inventories table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE inventories\\\n",
+    "                ALTER COLUMN set_number\\\n",
+    "                TYPE VARCHAR;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataframe is inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading the inventories data in a dataframe\n",
+    "inventories_df = pd.read_csv('inventories.csv')\n",
+    "\n",
+    "# Renaming the set_num column in the dataframe to correspond with the set_number column in the sets table\n",
+    "column_mapping = {\n",
+    "    'set_num': 'set_number'\n",
+    "}\n",
+    "\n",
+    "inventories_df.rename(columns=column_mapping, inplace=True)\n",
+    "\n",
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, inventories_df, 'inventories')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inserting data into the inventory sets table\n",
+    "\n",
+    "Since the inventory sets table references the sets table from its 'set_number' column, hence I need to update the data type to VARCHAR, to correspond with that of the sets table.\n",
+    "\n",
+    "Also, the 'set_num' column in the dataframe has to have the same column name as the 'set_number' column in the database table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Updating the data type of the 'set_number' column in the inventory sets table\n",
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE inventory_sets\\\n",
+    "                ALTER COLUMN set_number\\\n",
+    "                TYPE VARCHAR;\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataframe is inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading the inventories data in a dataframe\n",
+    "inventory_sets_df = pd.read_csv('inventory_sets.csv')\n",
+    "\n",
+    "# Renaming the set_num column in the dataframe to correspond with the set_number column in the sets table\n",
+    "column_mapping = {\n",
+    "    'set_num': 'set_number'\n",
+    "}\n",
+    "\n",
+    "inventory_sets_df.rename(columns=column_mapping, inplace=True)\n",
+    "\n",
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, inventory_sets_df, 'inventory_sets')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Inserting data into the inventory parts table\n",
+    "The 'f' and 't' values in the 'is_spare' column need to be converted to their boolean alternatives before being inserted into the inventory_parts table. \n",
+    "\n",
+    "Also, the 'part_num' and 'color_id' columns in the dataframe must have the same column names as the 'part_number' and 'colour_id' columns in the database table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: insert or update on table \"inventory_parts\" violates foreign key constraint \"fk_partnum\"\n",
+      "DETAIL:  Key (part_number)=(3650) is not present in table \"parts\".\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reading the inventory parts data into a dataframe\n",
+    "inventory_parts_df = pd.read_csv('inventory_parts.csv')\n",
+    "\n",
+    "column_mapping = {\n",
+    "    'part_num' : 'part_number',\n",
+    "    'color_id' : 'colour_id'\n",
+    "}\n",
+    "\n",
+    "inventory_parts_df.rename(columns=column_mapping, inplace=True)\n",
+    "\n",
+    "# Replacing the respective values with Boolean False/True\n",
+    "inventory_parts_df.loc[inventory_parts_df['is_spare'] == 'f', 'is_spare'] = False\n",
+    "inventory_parts_df.loc[inventory_parts_df['is_spare'] == 't', 'is_spare'] = True\n",
+    "\n",
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, inventory_parts_df, 'inventory_parts')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It has been observed that they are some records in inventory_parts, with part numbers not in the parts table. Hence, it is recommended to remove the foreign key relationship between the inventory_parts and parts tables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    cur.execute(\"ALTER TABLE inventory_parts\\\n",
+    "                DROP CONSTRAINT fk_partnum\")\n",
+    "except psycopg2.Error as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the dataframe is inserted\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inserting the data from the dataframe into the corresponding table\n",
+    "execute_df_values(conn, inventory_parts_df, 'inventory_parts')"
+   ]
   }
  ],
  "metadata": {
