Validated the database tables

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -899,6 +899,115 @@
     "# Inserting the data from the dataframe into the corresponding table\n",
     "execute_df_values(conn, inventory_parts_df, 'inventory_parts')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The aim of this is to validate if all the data has been successfully imported into their respective tables in the LEGO database.\n",
+    "\n",
+    "\n",
+    "**Validation conditions**\n",
+    "\n",
+    "\n",
+    "Number of rows in each pandas dataframe = Number of records in the corresponding database table\n",
+    "\n",
+    "Number of columns in each pandas dataframe = Number of fields in the corresponding database table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def validate_tables(df, table_name):\n",
+    "    \n",
+    "    # Displaying validation message\n",
+    "    print(f\"Validating the {table_name} table...\\n\\\n",
+    "        Validating the first condition...\")\n",
+    "    \n",
+    "    # Postgresql query to return the number of records\n",
+    "    records_query = f\"SELECT COUNT(*) FROM {table_name};\"\n",
+    "    \n",
+    "    # Executing the records query\n",
+    "    try:\n",
+    "        cur.execute(records_query)\n",
+    "    except psycopg2.Error as e:\n",
+    "        print(e)\n",
+    "    \n",
+    "    # Fetching the number of records in the database table\n",
+    "    record_count = cur.fetchone()[0]\n",
+    "    \n",
+    "    # Fetching the number of rows in the dataframe\n",
+    "    row_count = df.shape[0]\n",
+    "    \n",
+    "    if (record_count == row_count):\n",
+    "        print(f\"The {table_name} table has passed the first validation conditioin \\n\\\n",
+    "            Number of table records = {record_count}\\n\\n\\\n",
+    "            Validating the second condition...\")\n",
+    "        \n",
+    "        fields_query = f\"SELECT COUNT(*) FROM information_schema.columns WHERE table_name = '{table_name}';\"\n",
+    "        \n",
+    "        # Executing the records query\n",
+    "        try:\n",
+    "            cur.execute(fields_query)\n",
+    "        except psycopg2.Error as e:\n",
+    "            print(e) \n",
+    "            \n",
+    "        # Fetch the result\n",
+    "        field_count = cur.fetchone()[0]   \n",
+    "        \n",
+    "        column_count = df.shape[1] \n",
+    "        \n",
+    "        if (field_count == column_count):\n",
+    "            print(f\"The {table_name} table has passed the second validation conditioin \\n\\\n",
+    "                Number of table fields = {field_count}\")\n",
+    "        else:\n",
+    "            print(f\"The {table_name} table has failed the second validation condition \\n\\\n",
+    "                    Number of table fields = {field_count} \\n\\\n",
+    "                    Number of dataframe columns = {column_count}\")\n",
+    "            \n",
+    "    else:\n",
+    "        print(f\"The {table_name} table has failed the first validation condition \\n\\\n",
+    "            Number of table records = {record_count} \\n\\\n",
+    "            Number of dataframe rows = {row_count}\")\n",
+    "    \n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating the inventories table...\n",
+      "        Validating the first condition...\n",
+      "The inventories table has passed the first validation conditioin \n",
+      "            Number of table records = 11681\n",
+      "\n",
+      "            Validating the second condition...\n",
+      "The inventories table has passed the second validation conditioin \n",
+      "                Number of table fields = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "validate_tables(inventories_df, 'inventories')"
+   ]
   }
  ],
  "metadata": {
